[gd_scene load_steps=9 format=3 uid="uid://bfcmxusp8k0y"]

[ext_resource type="Script" path="res://scenes/playground/invoslots_s.gd" id="1_tjklh"]
[ext_resource type="PackedScene" uid="uid://dggppgt6n73mg" path="res://scenes/playground/invo_slot.tscn" id="1_tnt7k"]
[ext_resource type="Texture2D" uid="uid://c3l8k7gj2hqk1" path="res://assets/tavern.png" id="3_yrb83"]
[ext_resource type="Texture2D" uid="uid://d0oa2k08x7o4i" path="res://assets/scifiStructure_14.png" id="4_id3td"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khx7p"]
size = Vector2(1499, 169.5)

[sub_resource type="Animation" id="Animation_b560j"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -250)]
}

[sub_resource type="Animation" id="Animation_hno6f"]
resource_name = "new_animation_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -250), Vector2(0, -250)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hoy7h"]
_data = {
"new_animation": SubResource("Animation_b560j"),
"new_animation_2": SubResource("Animation_hno6f")
}

[node name="Invo" type="Node2D"]
script = ExtResource("1_tjklh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(915.5, 993.75)
shape = SubResource("RectangleShape2D_khx7p")

[node name="BackpackSlots" type="Node2D" parent="."]
position = Vector2(0, -68)
metadata/_edit_group_ = true

[node name="InvoSlot" parent="BackpackSlots" instance=ExtResource("1_tnt7k")]
position = Vector2(395, 1220)

[node name="Item" parent="BackpackSlots/InvoSlot" index="1"]
texture = ExtResource("3_yrb83")

[node name="GenericItem" parent="BackpackSlots/InvoSlot/Item" index="0"]
texture = ExtResource("3_yrb83")

[node name="InvoSlot3" parent="BackpackSlots" instance=ExtResource("1_tnt7k")]
position = Vector2(995, 1220)

[node name="InvoSlot4" parent="BackpackSlots" instance=ExtResource("1_tnt7k")]
position = Vector2(595, 1220)

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackpackSlots"]
libraries = {
"": SubResource("AnimationLibrary_hoy7h")
}

[node name="InvoSlot2" parent="BackpackSlots" instance=ExtResource("1_tnt7k")]
position = Vector2(795, 1220)

[node name="InvoSlot5" parent="BackpackSlots" instance=ExtResource("1_tnt7k")]
position = Vector2(1195, 1220)

[node name="Item" parent="BackpackSlots/InvoSlot5" index="1"]
scale = Vector2(0.696, 0.696)
texture = ExtResource("4_id3td")

[node name="GenericItem" parent="BackpackSlots/InvoSlot5/Item" index="0"]
scale = Vector2(2.096, 2.096)
texture = ExtResource("4_id3td")

[node name="InvoSlot6" parent="BackpackSlots" instance=ExtResource("1_tnt7k")]
position = Vector2(1395, 1220)

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]

[editable path="BackpackSlots/InvoSlot"]
[editable path="BackpackSlots/InvoSlot5"]
